Update Scalafix template and add crossBuild config (#14)
* update scalafix template and add crossBuild config

* License under CC0 to release the copyright

* Fix template testing

This is a weird template since it creates an sbt build inside "scalafix" subdirectory. Because of that, the normal scripted test doesn't work well, and instead `build.sbt` launches its own sbt to run the test manually. This fixes some details and adds comment documenting the fact.

Co-authored-by: Meriam Lachkar <meriam.lachkar@gmail.com>